language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_argument_with_private_type_from_same_module.snap
---
source: language-server/src/tests/action.rs
expression: "\ntype Wibble {\n  Wobble(Int, String)\n}\n\npub fn main(arg: Wibble) {\n  todo\n}\n"
---
----- BEFORE ACTION

type Wibble {
  Wobble(Int, String)
}

pub fn main(arg: Wibble) {
            ▔▔▔▔▔↑        
  todo
}


----- AFTER ACTION

type Wibble {
  Wobble(Int, String)
}

pub fn main(arg: Wibble) {
  let Wobble(int, string) = arg
  todo
}
