language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_argument_works_on_nested_fn_arguments.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  map([[#(1, 2)]], fn(list) {\n    map(list, fn(tuple) {\n      todo\n    })\n  })\n}\n\nfn map(list: List(a), fun: fn(a) -> b) { todo }\n"
---
----- BEFORE ACTION

pub fn main() {
  map([[#(1, 2)]], fn(list) {
    map(list, fn(tuple) {
                 ↑       
      todo
    })
  })
}

fn map(list: List(a), fun: fn(a) -> b) { todo }


----- AFTER ACTION

pub fn main() {
  map([[#(1, 2)]], fn(list) {
    map(list, fn(tuple) {
      let #(int, int_2) = tuple
      todo
    })
  })
}

fn map(list: List(a), fun: fn(a) -> b) { todo }
