language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_call_statement.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble()\n}\n\npub fn wibble() -> Result(Int, String) { todo }\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble()
  ↑       
}

pub fn wibble() -> Result(Int, String) { todo }


----- AFTER ACTION

pub fn main() {
  case wibble() {
    Ok(value) -> todo
    Error(value) -> todo
  }
}

pub fn wibble() -> Result(Int, String) { todo }
