language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_call_statement_in_the_middle_of_a_function_body.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble()\n  Nil\n}\n\npub fn wibble() -> Result(Int, String) { todo }\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble()
  ↑       
  Nil
}

pub fn wibble() -> Result(Int, String) { todo }


----- AFTER ACTION

pub fn main() {
  case wibble() {
    Ok(value) -> todo
    Error(value) -> todo
  }
  Nil
}

pub fn wibble() -> Result(Int, String) { todo }
