language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_clause_variable_with_label_shorthand.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  case new() {\n    Wobble(wibble:) -> 1\n    _ -> 2\n  }\n}\n\ntype Wibble {\n  Wobble(wibble: Wibble)\n  Woo\n}\n\nfn new() { Wobble }\n\n"
---
----- BEFORE ACTION

pub fn main() {
  case new() {
    Wobble(wibble:) -> 1
           ↑            
    _ -> 2
  }
}

type Wibble {
  Wobble(wibble: Wibble)
  Woo
}

fn new() { Wobble }



----- AFTER ACTION

pub fn main() {
  case new() {
    Wobble(wibble: Wobble(wibble:)) -> 1
    Wobble(wibble: Woo) -> 1
    _ -> 2
  }
}

type Wibble {
  Wobble(wibble: Wibble)
  Woo
}

fn new() { Wobble }
