language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_discard_pattern_in_branch.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(x: Result(List(a), Nil)) {\n  case x {\n    Error(Nil) -> todo\n    Ok(_) -> todo\n  }\n}"
---
----- BEFORE ACTION
pub fn main(x: Result(List(a), Nil)) {
  case x {
    Error(Nil) -> todo
    Ok(_) -> todo
       ↑         
  }
}


----- AFTER ACTION
pub fn main(x: Result(List(a), Nil)) {
  case x {
    Error(Nil) -> todo
    Ok([]) -> todo
    Ok([first, ..rest]) -> todo
  }
}
